--- a/cnn-resnet-cifar.ipynb
+++ b/cnn-resnet-cifar.ipynb
@@ -421,7 +421,7 @@
         "id": "5bd191ed"
       },
       "source": [
-        "### a Simple Convolutional Neural Network\n",
+        "### Simple Convolutional Neural Network\n",
         "\n",
         "We define our CNN model using `nn.Module`. It consists of:\n",
         "- One convolutional layer followed by ReLU and max pooling\n",
@@ -601,7 +601,7 @@
         "id": "88Hb0C4p8CoP"
       },
       "source": [
-        "## Using a pretrained model like ResNet18\n",
+        "### Using a pretrained model like ResNet18\n",
         "\n",
         "In this section, we explore a pretrained **ResNet18** model from `torchvision.models`.\n",
         "\n",
@@ -1146,6 +1146,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Evaluation"
+      ],
+      "metadata": {
+        "id": "vGpdvq3VkaxF"
+      },
+      "id": "vGpdvq3VkaxF"
+    },
+    {
       "cell_type": "code",
       "source": [
         "summary = pd.DataFrame([\n",
@@ -1584,6 +1594,16 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## The End"
+      ],
+      "metadata": {
+        "id": "PTLlXYqtkDY0"
+      },
+      "id": "PTLlXYqtkDY0"
     }
   ],
   "metadata": {
